force-app/main/default/objects/NCSP_DBR_Products__c/NCSP_DBR_Products__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NCSP DBR Products</label>
</CustomObject>