force-app/main/default/objects/NCSP_DBR_Products__c/fields/Case_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordTypeId__c</fullName>
    <description>Identifies the case type that will be create for the associated product</description>
    <label>Case RecordTypeId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>