force-app/main/default/objects/NCSP_DBR_Products__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>The NCSP wizard matches this value to the Type field on the Opportunity</description>
    <label>Opportunity Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>