force-app/main/default/objects/NCSP_DBR_Products__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>The NCSP wizard matches this value to the DB&amp;R Type selected on the Account-Setup page of the wizard.</description>
    <label>Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>